--- a/Archive/translation/LibreTranslate local API run.txt
+++ b/Archive/translation/LibreTranslate local API run.txt
@@ -10,7 +10,6 @@ Run LibreTranslate Container
      ```
 - This will run LibreTranslate on `http://localhost:5000`.
 
-
-FR restricted container
+Run a container restricted to French only (and english)
 
 docker run -d -p 5000:5000 libretranslate/libretranslate --load-only en,fr 
